<resources>
    <string name="app_name">Tarantas</string>
    <string name="title_activity_tabbar">TabbarActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Post Product</string>
    <string name="title_notifications">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_phone_number">Номер телефона</string>
    <string name="prompt_company_name">Название компании</string>
    <string name="prompt_first_name">Имя</string>
    <string name="prompt_last_name">Фамилия</string>
    <string name="prompt_city">Город</string>
    <string name="prompt_address">Адрес</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="action_sign_up_suggestion">У вас нет аккаунта? Зарегистрироваться</string>
    <string name="action_sign_in_suggestion">У вас уже есть аккаунт? Войти</string>
    <string name="error_invalid_email">Некорректный email</string>
    <string name="error_invalid_password">Пароль слишком короткий</string>
    <string name="error_incorrect_password">Неправильный пароль</string>
    <string name="error_field_required">Заполните все поля</string>
    <string name="permission_rationale">"Email объязательный."
    </string>
    <string name="title_activity_signup">Sign up</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>
